add setting files

--- a/src/distributed/gpu_mapping.yaml
+++ b/src/distributed/gpu_mapping.yaml
@@ -4,3 +4,47 @@ mapping_config6_4:
     gpu-worker3: [1, 1]
     gpu-worker4: [2, 1]
     gpu-worker5: [2, 1]
+
+mapping_config_grid_10:
+    gpu-worker1: [1]
+    gpu-worker2: [1]
+    gpu-worker3: [1]
+    gpu-worker4: [1]
+    gpu-worker5: [1]
+    gpu-worker6: [1]
+    gpu-worker7: [1]
+    gpu-worker8: [1]
+    gpu-worker9: [1]
+    gpu-worker10: [1]
+    gpu-worker11: [1]
+
+mapping_config_pascal_10:
+    gpu-worker1: [1, 1]
+    gpu-worker2: [1, 1]
+    gpu-worker3: [1, 1]
+    gpu-worker4: [1, 1]
+    gpu-worker5: [1, 1]
+    gpu-worker6: [1, 0]
+
+mapping_config_grid_20:
+    gpu-worker1: [1]
+    gpu-worker2: [1]
+    gpu-worker3: [1]
+    gpu-worker4: [1]
+    gpu-worker5: [1]
+    gpu-worker6: [1]
+    gpu-worker7: [1]
+    gpu-worker8: [1]
+    gpu-worker9: [1]
+    gpu-worker10: [1]
+    gpu-worker11: [1]
+    gpu-worker12: [1]
+    gpu-worker13: [1]
+    gpu-worker14: [1]
+    gpu-worker15: [1]
+    gpu-worker16: [1]
+    gpu-worker17: [1]
+    gpu-worker18: [1]
+    gpu-worker19: [1]
+    gpu-worker20: [1]
+    gpu-worker21: [1]
