--- a/src/distributed/gpu_mapping.yaml
+++ b/src/distributed/gpu_mapping.yaml
@@ -1,53 +1,5 @@
-mapping_config6_4:
-    gpu-worker2: [1, 1]
-    gpu-worker1: [1, 1]
-    gpu-worker3: [1, 1]
-    gpu-worker4: [2, 1]
-    gpu-worker5: [2, 1]
-
-mapping_config_grid_10:
-    gpu-worker1: [1]
-    gpu-worker2: [1]
-    gpu-worker3: [1]
-    gpu-worker4: [1]
-    gpu-worker5: [1]
-    gpu-worker6: [1]
-    gpu-worker7: [1]
-    gpu-worker8: [1]
-    gpu-worker9: [1]
-    gpu-worker10: [1]
-    gpu-worker11: [1]
-
-mapping_config_pascal_10:
-    gpu-worker1: [1, 1]
-    gpu-worker2: [1, 1]
-    gpu-worker3: [1, 1]
-    gpu-worker4: [1, 1]
-    gpu-worker5: [1, 1]
-    gpu-worker6: [1, 0]
-
-mapping_config_grid_20:
-    gpu-worker1: [1]
-    gpu-worker2: [1]
-    gpu-worker3: [1]
-    gpu-worker4: [1]
-    gpu-worker5: [1]
-    gpu-worker6: [1]
-    gpu-worker7: [1]
-    gpu-worker8: [1]
-    gpu-worker9: [1]
-    gpu-worker10: [1]
-    gpu-worker11: [1]
-    gpu-worker12: [1]
-    gpu-worker13: [1]
-    gpu-worker14: [1]
-    gpu-worker15: [1]
-    gpu-worker16: [1]
-    gpu-worker17: [1]
-    gpu-worker18: [1]
-    gpu-worker19: [1]
-    gpu-worker20: [1]
-    gpu-worker21: [1]
+mapping_default:
+    ChaoyangHe-GPU-RTX2080Tix4: [3, 3, 3, 2]
 mapping_config_client_num_10_client_num_pernode_1_npernode_1:
     gpu-worker0:
     - 1
@@ -71,111 +23,8 @@ mapping_config_client_num_10_client_num_pernode_1_npernode_1:
     - 1
     gpu-worker9:
     - 1
-mapping_config_client_num_10_client_num_pernode_1_npernode_2:
-    gpu-worker0:
-    - 1
-    - 1
-    gpu-worker1:
-    - 1
-    - 1
-    gpu-worker2:
-    - 1
-    - 1
-    gpu-worker3:
-    - 1
-    - 1
-    gpu-worker4:
-    - 1
-    - 1
-    gpu-worker5:
-    - 1
-    - 0
-mapping_config_client_num_100_client_num_pernode_10_npernode_1:
-    gpu-worker0:
-    - 10
-    gpu-worker1:
-    - 10
-    gpu-worker10:
-    - 1
-    gpu-worker2:
-    - 10
-    gpu-worker3:
-    - 10
-    gpu-worker4:
-    - 10
-    gpu-worker5:
-    - 10
-    gpu-worker6:
-    - 10
-    gpu-worker7:
-    - 10
-    gpu-worker8:
-    - 10
-    gpu-worker9:
-    - 10
-mapping_config_client_num_20_client_num_pernode_2_npernode_1:
-    gpu-worker0:
-    - 2
-    gpu-worker1:
-    - 2
-    gpu-worker10:
-    - 1
-    gpu-worker2:
-    - 2
-    gpu-worker3:
-    - 2
-    gpu-worker4:
-    - 2
-    gpu-worker5:
-    - 2
-    gpu-worker6:
-    - 2
-    gpu-worker7:
-    - 2
-    gpu-worker8:
-    - 2
-    gpu-worker9:
-    - 2
-mapping_config_client_num_20_client_num_pernode_1_npernode_1:
+mapping_config_client_num_1_client_num_pernode_1_npernode_1:
     gpu-worker0:
     - 1
     gpu-worker1:
-    - 1
-    gpu-worker10:
-    - 1
-    gpu-worker11:
-    - 1
-    gpu-worker12:
-    - 1
-    gpu-worker13:
-    - 1
-    gpu-worker14:
-    - 1
-    gpu-worker15:
-    - 1
-    gpu-worker16:
-    - 1
-    gpu-worker17:
-    - 1
-    gpu-worker18:
-    - 1
-    gpu-worker19:
-    - 1
-    gpu-worker2:
-    - 1
-    gpu-worker20:
-    - 1
-    gpu-worker3:
-    - 1
-    gpu-worker4:
-    - 1
-    gpu-worker5:
-    - 1
-    gpu-worker6:
-    - 1
-    gpu-worker7:
-    - 1
-    gpu-worker8:
-    - 1
-    gpu-worker9:
     - 1
