--- a/src/distributed/gpu_mapping.yaml
+++ b/src/distributed/gpu_mapping.yaml
@@ -107,3 +107,38 @@ mapping_config_client_num_per_round_20_worker_num_pernode_1_npernode_1:
     - 1
     gpu-worker9:
     - 1
+mapping_config_client_num_per_round_16_worker_num_pernode_1_npernode_1:
+    gpu-worker0:
+    - 1
+    gpu-worker1:
+    - 1
+    gpu-worker10:
+    - 1
+    gpu-worker11:
+    - 1
+    gpu-worker12:
+    - 1
+    gpu-worker13:
+    - 1
+    gpu-worker14:
+    - 1
+    gpu-worker15:
+    - 1
+    gpu-worker16:
+    - 1
+    gpu-worker2:
+    - 1
+    gpu-worker3:
+    - 1
+    gpu-worker4:
+    - 1
+    gpu-worker5:
+    - 1
+    gpu-worker6:
+    - 1
+    gpu-worker7:
+    - 1
+    gpu-worker8:
+    - 1
+    gpu-worker9:
+    - 1
