--- a/src/distributed/gpu_mapping.yaml
+++ b/src/distributed/gpu_mapping.yaml
@@ -161,3 +161,113 @@ mapping_config_client_num_per_round_10_worker_num_pernode_1_npernode_2:
     gpu-worker5:
     - 1
     - 0
+mapping_config_client_num_per_round_20_worker_num_pernode_1_npernode_2:
+    gpu-worker0:
+    - 1
+    - 1
+    gpu-worker1:
+    - 1
+    - 1
+    gpu-worker10:
+    - 1
+    - 0
+    gpu-worker2:
+    - 1
+    - 1
+    gpu-worker3:
+    - 1
+    - 1
+    gpu-worker4:
+    - 1
+    - 1
+    gpu-worker5:
+    - 1
+    - 1
+    gpu-worker6:
+    - 1
+    - 1
+    gpu-worker7:
+    - 1
+    - 1
+    gpu-worker8:
+    - 1
+    - 1
+    gpu-worker9:
+    - 1
+    - 1
+mapping_config_client_num_per_round_20_worker_num_pernode_2_npernode_1:
+    gpu-worker0:
+    - 2
+    gpu-worker1:
+    - 2
+    gpu-worker10:
+    - 1
+    gpu-worker2:
+    - 2
+    gpu-worker3:
+    - 2
+    gpu-worker4:
+    - 2
+    gpu-worker5:
+    - 2
+    gpu-worker6:
+    - 2
+    gpu-worker7:
+    - 2
+    gpu-worker8:
+    - 2
+    gpu-worker9:
+    - 2
+mapping_config_client_num_per_round_50_worker_num_pernode_2_gpupernode_1:
+    gpu-worker0:
+    - 2
+    gpu-worker1:
+    - 2
+    gpu-worker10:
+    - 2
+    gpu-worker11:
+    - 2
+    gpu-worker12:
+    - 2
+    gpu-worker13:
+    - 2
+    gpu-worker14:
+    - 2
+    gpu-worker15:
+    - 2
+    gpu-worker16:
+    - 2
+    gpu-worker17:
+    - 2
+    gpu-worker18:
+    - 2
+    gpu-worker19:
+    - 2
+    gpu-worker2:
+    - 2
+    gpu-worker20:
+    - 2
+    gpu-worker21:
+    - 2
+    gpu-worker22:
+    - 2
+    gpu-worker23:
+    - 2
+    gpu-worker24:
+    - 2
+    gpu-worker25:
+    - 1
+    gpu-worker3:
+    - 2
+    gpu-worker4:
+    - 2
+    gpu-worker5:
+    - 2
+    gpu-worker6:
+    - 2
+    gpu-worker7:
+    - 2
+    gpu-worker8:
+    - 2
+    gpu-worker9:
+    - 2
