--- a/src/distributed/gpu_mapping.yaml
+++ b/src/distributed/gpu_mapping.yaml
@@ -440,3 +440,89 @@ mapping_config_client_num_per_round_50_worker_num_pernode_5_gpupernode_1:
     - 5
     gpu-worker9:
     - 5
+mapping_config_client_num_per_round_50_worker_num_pergpu_5_gpupernode_1:
+    gpu-worker0:
+    - 5
+    gpu-worker1:
+    - 5
+    gpu-worker10:
+    - 1
+    gpu-worker2:
+    - 5
+    gpu-worker3:
+    - 5
+    gpu-worker4:
+    - 5
+    gpu-worker5:
+    - 5
+    gpu-worker6:
+    - 5
+    gpu-worker7:
+    - 5
+    gpu-worker8:
+    - 5
+    gpu-worker9:
+    - 5
+mapping_config_client_num_per_round_25_worker_num_pergpu_5_gpupernode_1:
+    gpu-worker0:
+    - 5
+    gpu-worker1:
+    - 5
+    gpu-worker2:
+    - 5
+    gpu-worker3:
+    - 5
+    gpu-worker4:
+    - 5
+    gpu-worker5:
+    - 1
+mapping_config_client_num_per_round_10_worker_num_pergpu_5_gpupernode_1:
+    gpu-worker0:
+    - 5
+    gpu-worker1:
+    - 5
+    gpu-worker2:
+    - 1
+mapping_config_client_num_per_round_10_worker_num_pergpu_2_gpupernode_1:
+    gpu-worker0:
+    - 2
+    gpu-worker1:
+    - 2
+    gpu-worker2:
+    - 2
+    gpu-worker3:
+    - 2
+    gpu-worker4:
+    - 2
+    gpu-worker5:
+    - 1
+mapping_config_client_num_per_round_10_worker_num_pergpu_1_gpupernode_2:
+    gpu-worker0:
+    - 1
+    - 1
+    gpu-worker1:
+    - 1
+    - 1
+    gpu-worker2:
+    - 1
+    - 1
+    gpu-worker3:
+    - 1
+    - 1
+    gpu-worker4:
+    - 1
+    - 1
+    gpu-worker5:
+    - 1
+    - 0
+mapping_config_client_num_per_round_20_worker_num_pergpu_5_gpupernode_1:
+    gpu-worker0:
+    - 5
+    gpu-worker1:
+    - 5
+    gpu-worker2:
+    - 5
+    gpu-worker3:
+    - 5
+    gpu-worker4:
+    - 1
