--- a/src/distributed/gpu_mapping.yaml
+++ b/src/distributed/gpu_mapping.yaml
@@ -583,3 +583,122 @@ mapping_config_client_num_per_round_25_worker_num_pergpu_2_gpupernode_1:
     - 2
     gpu-worker9:
     - 2
+mapping_config_client_num_per_round_20_worker_num_pergpu_2_gpupernode_1:
+    gpu-worker0:
+    - 2
+    gpu-worker1:
+    - 2
+    gpu-worker10:
+    - 1
+    gpu-worker2:
+    - 2
+    gpu-worker3:
+    - 2
+    gpu-worker4:
+    - 2
+    gpu-worker5:
+    - 2
+    gpu-worker6:
+    - 2
+    gpu-worker7:
+    - 2
+    gpu-worker8:
+    - 2
+    gpu-worker9:
+    - 2
+mapping_config_client_num_per_round_50_worker_num_pergpu_2_gpupernode_1:
+    gpu-worker0:
+    - 2
+    gpu-worker1:
+    - 2
+    gpu-worker10:
+    - 2
+    gpu-worker11:
+    - 2
+    gpu-worker12:
+    - 2
+    gpu-worker13:
+    - 2
+    gpu-worker14:
+    - 2
+    gpu-worker15:
+    - 2
+    gpu-worker16:
+    - 2
+    gpu-worker17:
+    - 2
+    gpu-worker18:
+    - 2
+    gpu-worker19:
+    - 2
+    gpu-worker2:
+    - 2
+    gpu-worker20:
+    - 2
+    gpu-worker21:
+    - 2
+    gpu-worker22:
+    - 2
+    gpu-worker23:
+    - 2
+    gpu-worker24:
+    - 2
+    gpu-worker25:
+    - 1
+    gpu-worker3:
+    - 2
+    gpu-worker4:
+    - 2
+    gpu-worker5:
+    - 2
+    gpu-worker6:
+    - 2
+    gpu-worker7:
+    - 2
+    gpu-worker8:
+    - 2
+    gpu-worker9:
+    - 2
+mapping_config_client_num_per_round_20_worker_num_pergpu_1_gpupernode_1:
+    gpu-worker0:
+    - 1
+    gpu-worker1:
+    - 1
+    gpu-worker10:
+    - 1
+    gpu-worker11:
+    - 1
+    gpu-worker12:
+    - 1
+    gpu-worker13:
+    - 1
+    gpu-worker14:
+    - 1
+    gpu-worker15:
+    - 1
+    gpu-worker16:
+    - 1
+    gpu-worker17:
+    - 1
+    gpu-worker18:
+    - 1
+    gpu-worker19:
+    - 1
+    gpu-worker2:
+    - 1
+    gpu-worker20:
+    - 1
+    gpu-worker3:
+    - 1
+    gpu-worker4:
+    - 1
+    gpu-worker5:
+    - 1
+    gpu-worker6:
+    - 1
+    gpu-worker7:
+    - 1
+    gpu-worker8:
+    - 1
+    gpu-worker9:
+    - 1
